# dummy-cpack-project

./: CMakeLists.txt
src/: hello.cc
